[bug][footer]: fix drop down not sitting center on mobile

--- a/app/assets/stylesheets/redesign/_footer.css.scss
+++ b/app/assets/stylesheets/redesign/_footer.css.scss
@@ -100,6 +100,8 @@
 
 		@media(max-width: 768px){
 			max-width: 100%;
+			margin-left: 0;
+			margin-right: 0;
 		}
 
 		.btn {
